# ZCReator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  commands.txt  imgui.ini
assets/ZCR/shaders/: colorFigure.vs
cmakeGitSubmodules/: CMakeLists.txt
src/: ButtonPairs.h  ZCR_Load.cpp  ZCR_Load.h  main.cpp
src/File/: ZCR_File.h
src/Objects/: ZCR_Cube.cpp  ZCR_Cube.h  ZCR_Figure.cpp  ZCR_Figure.h  ZCR_Line.cpp  ZCR_Line.h  ZCR_Point.cpp  ZCR_Point.h  ZCR_Triangle.cpp  ZCR_Triangle.h
src/Objects/Figure/: ZCR_ActiveFigures.cpp  ZCR_ActiveFigures.h  ZCR_Figure.cpp  ZCR_Figure.h  ZCR_FigureCreator.cpp  ZCR_FigureCreator.h  ZCR_Figures.cpp  ZCR_Figures.h
src/Objects/Figure/FigureData/: ZCR_Color.cpp  ZCR_Color.h  ZCR_Line.cpp  ZCR_Line.h  ZCR_MatModel.h  ZCR_Point.cpp  ZCR_Point.h  ZCR_Surface.cpp  ZCR_Surface.h  ZCR_VBO.cpp  ZCR_VBO.h
src/Objects/Figure/FigureSet/: ZCR_Color.cpp  ZCR_Color.h  ZCR_FigureData.cpp  ZCR_FigureData.h  ZCR_FigureSet.cpp  ZCR_FigureSet.h  ZCR_Line.cpp  ZCR_Line.h  ZCR_Point.cpp  ZCR_Point.h  ZCR_Surface.cpp  ZCR_Surface.h  ZCR_VBO.cpp  ZCR_VBO.h
src/Objects/Figure/ImGui/: ZCR_IGW_Figures.cpp  ZCR_IGW_Figures.h
src/Objects/ImGui/: ZCR_ImGui.cpp  ZCR_ImGui.h
src/Objects/Scene/: ZCR_Axis.h  ZCR_Camera.cpp  ZCR_Camera.h  ZCR_Mesh.cpp  ZCR_Mesh.h  ZCR_Orientation3D.cpp  ZCR_Orientation3D.h  ZCR_SMModel.h  ZCR_Scene.cpp  ZCR_Scene.h  ZCR_SceneMode.cpp  ZCR_SceneMode.h
src/Objects/Scene/GUI/: ZCR_GUI_W_Scene.cpp  ZCR_GUI_W_Scene.h  ZCR_GUI_W_SceneOptions.cpp  ZCR_GUI_W_SceneOptions.h
src/Objects/Scene/GUI/Mode/: ZCR_GUI_SceneMode.cpp  ZCR_GUI_SceneMode.h
src/Objects/Scene/ImGui/: ZCR_IGWBM_Create.cpp  ZCR_IGWBM_Create.h  ZCR_IGWBM_Interface.cpp  ZCR_IGWBM_Interface.h  ZCR_IGWBM_M_Edit.cpp  ZCR_IGWBM_M_Edit.h  ZCR_IGWBM_M_Model.cpp  ZCR_IGWBM_M_Model.h  ZCR_IGWBM_M_Sculpting.cpp  ZCR_IGWBM_M_Sculpting.h  ZCR_IGWBM_MainMenu.cpp  ZCR_IGWBM_MainMenu.h  ZCR_IGWBM_Mode.cpp  ZCR_IGWBM_Mode.h  ZCR_IGWCreateAndMode.cpp  ZCR_IGWCreateAndMode.h  ZCR_IGWFigures.cpp  ZCR_IGWFigures.h  ZCR_IGWScene.cpp  ZCR_IGWScene.h  ZCR_IconTexture.h
src/Objects/Scene/Orientation3/: ZCR_GUI_Orientation3D.h
src/Objects/Scene/Orientation3D/: ZCR_Orientation3D.cpp  ZCR_Orientation3D.h  ZCR_TextAxis.cpp  ZCR_TextAxis.h  ZCR_TextAxises.cpp  ZCR_TextAxises.h
src/Renderer/: ZCR_DrawerCreator.cpp  ZCR_FrameBuffer.h  ZCR_RLDAlphaBlending.cpp  ZCR_RLDAlphaBlending.h  ZCR_RenderLevel.h  ZCR_RendererLevelDrawer.cpp  ZCR_RendererLevelDrawer.h  ZCR_ShaderKeeper.cpp  ZCR_ShaderKeeper.h
